updated for mp3

--- a/localhost.yml
+++ b/localhost.yml
@@ -8,7 +8,8 @@
   tasks:
 
     - include: tasks/webex.yml
-    - include: tasks/openshiftClient.yml    
+    - include: tasks/openshiftClient.yml   
+    - include: tasks/mp3.yml	 
 
     - name: install maven
       dnf: name=maven state=latest
